fix font layout shift

--- a/src/theme/global.css
+++ b/src/theme/global.css
@@ -1,5 +1,19 @@
-@import url("https://fonts.googleapis.com/css2?family=Almarai:wght@400;700&family=Merriweather:ital,wght@0,400;0,700;1,400;1,700&display=swap");
 
+@font-face {
+  font-family: 'Merriweather';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Georgia');
+}
+
+@font-face {
+  font-family: 'Almarai';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Arial');
+}
 html {
   --ion-dynamic-font: var(--ion-default-dynamic-font);
   --ion-font-family: "Merriweather", serif;
